# mycodex

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  run-hermes.sh  vite.config.js
backend/hermes_workspace/: broker.py  kanban_client.py  main.py  models.py  orchestrator.py  storage.py
frontend/src/: App.jsx  style.css
tests/: test_orchestrator.py
